# tesis

./: .gitignore  .~lock.Orientaciones.ods#  CMakeLists.txt  LICENSE  Notas.txt  Orientaciones.ods  README.md  Untitled-1  auxiliar.h  contornos.cpp  oe1y2.h  oe3.h  prueba_lectura.cpp  prueba_volumeToMesh.cpp  rename.cpp  tesis.cpp
